// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render children 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-d1p2lw"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-14dt8fo"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  >
    <select
      class="css-exabpr"
      data-g2-c16t="true"
      data-g2-component="Select"
      id="select"
    >
      <optgroup
        label="Snowmen"
      >
        <option
          value="olaf"
        >
          Olaf
        </option>
      </optgroup>
    </select>
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-19xoami"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-view wp-components-text css-ckswz2"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-view wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-d1p2lw"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-14dt8fo"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  >
    <select
      class="css-exabpr"
      data-g2-c16t="true"
      data-g2-component="Select"
      id="select"
    >
      <option
        value="olaf"
      >
        Olaf
      </option>
      <option
        value="samantha"
      >
        Samantha
      </option>
    </select>
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-19xoami"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-view wp-components-text css-ckswz2"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-view wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;

exports[`props should render disabled 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-d1p2lw"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
  disabled=""
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-14dt8fo"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  >
    <select
      class="css-exabpr"
      data-g2-c16t="true"
      data-g2-component="Select"
      disabled=""
      id="select"
    >
      <option
        value="olaf"
      >
        Olaf
      </option>
      <option
        value="samantha"
      >
        Samantha
      </option>
    </select>
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-19xoami"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-view wp-components-text css-ckswz2"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-view wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;

exports[`props should render readOnly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-d1p2lw"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-14dt8fo"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  >
    <select
      class="css-exabpr"
      data-g2-c16t="true"
      data-g2-component="Select"
      id="select"
      readonly=""
    >
      <option
        value="olaf"
      >
        Olaf
      </option>
      <option
        value="samantha"
      >
        Samantha
      </option>
    </select>
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-19xoami"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-view wp-components-text css-ckswz2"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-view wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;

exports[`props should render required 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-d1p2lw"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-14dt8fo"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  >
    <select
      class="css-exabpr"
      data-g2-c16t="true"
      data-g2-component="Select"
      id="select"
      required=""
    >
      <option
        value="olaf"
      >
        Olaf
      </option>
      <option
        value="samantha"
      >
        Samantha
      </option>
    </select>
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-19xoami"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-view wp-components-text css-ckswz2"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-view wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-d1p2lw"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
>
  <div
    class="wp-components-view wp-components-flex-item wp-components-flex-block css-14dt8fo"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  >
    <select
      class="css-1slal88"
      data-g2-c16t="true"
      data-g2-component="Select"
      id="select"
    >
      <option
        value="olaf"
      >
        Olaf
      </option>
      <option
        value="samantha"
      >
        Samantha
      </option>
    </select>
  </div>
  <div
    class="wp-components-view wp-components-flex-item css-19xoami"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-view wp-components-text css-ckswz2"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-view wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;
